WorkGroup Integration and Batch Update for Header Data

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -219,3 +219,7 @@ sapUiFormContainerTitle>.sapUiFormTitleH1,
 .sapUiSizeCompact .sapMTokenizerIndicator {
     color: #383c40;
 }
+
+.workgroupncheader {
+    color: white;
+}
